fix(social-media-carousel): hides buttons on mobile the right way

--- a/src/components/social-media-carousel/social-media-carousel.less
+++ b/src/components/social-media-carousel/social-media-carousel.less
@@ -57,10 +57,9 @@ http://flickity.metafizzy.co
 }
 
 .flickity-prev-next-button {
-	display: none;
-
+	.mobile-hidden;
+	
 	@media @l {
-		display: block;
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
